--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,4 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 .description{
   display: flex;
   flex-direction: column;
@@ -76,6 +35,10 @@ gap: 10px;
 
 .zoomable-box:hover {
   transform: scale(1.5);
+  /* color: red;
+  font-weight: "bolder";
+  font-size: 20px; */
+ 
 }
 .description3 {
   display: flex;
@@ -83,6 +46,40 @@ gap: 10px;
 height: 30px;
 justify-content:center;
 }
-/* body{
-  background-color: blue;
-} */
+body{
+  /* background-color: blue; */
+}
+.pump{
+  background-color: aquamarine;
+  border-radius: 10px;
+}
+img {
+  /* border: 2px solid black; */
+}
+@media  (max-width: 800px) {
+ 
+  .pumps {
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+  }
+
+  .pump {
+    width: 100%;
+  }
+
+  .zoomable-box:hover {
+    transform: none;
+  } 
+  .img{
+    display: flex;
+    justify-content: center;
+  }
+  
+  /* Ваши стили для смартфонов */
+}
+.ardonix{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
