--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   display: flex;
   flex-direction: row;
 height: 30px;
-
-
+justify-content: center;
+font-weight: bolder;
+font-size: 18px;
 }
 .colorP{
   color: red;
@@ -20,13 +21,14 @@ font-weight: bolder;
   display: flex;
   flex-direction:row;
   flex-wrap: wrap;
+  justify-content: space-around;
 gap: 10px;
   /* justify-content: space-between; */
   border: 2px solid #333; /* Толщина, стиль и цвет границы */
   border-radius: 8px; /* Закругление углов */
   padding: 20px; /* Внутренний отступ для контента */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8); /* Тень блока */
-  background-color: white;
+  background-color: rgb(225, 236, 178);
 }
 .zoomable-box {
  
@@ -52,8 +54,9 @@ body{
 }
 .pump{
  
-  background-color: aquamarine;
+  background-color: rgb(175, 217, 238);
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
 }
 img {
  
@@ -68,13 +71,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center; 
+  margin-bottom: 10px;
+  /* width: 495px; */
 }
-@media  (max-width: 800px) {
+@media  (max-width: 1080px) {
  
   .pumps {
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+flex-wrap: wrap;
     gap: 20px;
     padding: 10px;
+   background-color: rgb(216, 225, 153); 
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
   }
 
   .pump {
