--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ img {
   margin-bottom: 10px;
   /* width: 495px; */
 }
-@media  (max-width: 1080px) {
+@media  (max-width: 600px) {
  
   .pumps {
     display: flex;
@@ -115,5 +115,6 @@ display: inline-block;
 width: 500px;
 font-weight: bolder;
 font-size: 14px;
+margin:auto;
 }
 
