--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,13 @@ display: inline-block;
 width: 500px;
 font-weight: bolder;
 font-size: 14px;
-margin:auto;
+/* margin:auto; */
+/* text-align: center */
+text-align: justify;
+padding: 20px;
+}
+.main_info{
+display: flex;
+justify-content: center;
 }
 
