--- a/src/App.css
+++ b/src/App.css
@@ -56,15 +56,15 @@ justify-content:center;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
 }
-/* img {
+img {
  
   display: flex;
   justify-content: center;
  
- border: 2px black solid; */
+ border: 2px black solid;
   
-  
- */
+} 
+ 
 .img{
   display: flex;
   justify-content: center;
