--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ img {
   display: flex;
   justify-content: center;
  
- border: 2px black solid;
+ /* border: 2px black solid; */
   
 } 
  
@@ -122,4 +122,26 @@ padding: 20px;
 display: flex;
 justify-content: center;
 }
+.pumps2{
+  display: flex;
+    flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+    gap: 20px;
+    padding: 10px;
+   /* background-color: rgb(216, 225, 153); 
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8) */
+}
+.styled-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3366cc;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
 
+.styled-link:hover {
+  background-color: #003366;
+}
