--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ gap: 10px;
   border-radius: 8px; /* Закругление углов */
   padding: 20px; /* Внутренний отступ для контента */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8); /* Тень блока */
-  background-color: rgb(225, 236, 178);
+  background-color: rgb(8, 28, 116);
 }
 .zoomable-box {
  
@@ -52,7 +52,7 @@ justify-content:center;
 
 .pump{
  
-  background-color: rgb(175, 217, 238);
+  background-color: rgb(175, 237, 238);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8)
 }
@@ -144,4 +144,22 @@ justify-content: center;
 
 .styled-link:hover {
   background-color: #003366;
+}
+.endList{
+  font-size: large;
+  color: red;
+  font-weight: bold;
+}
+
+.endFix{
+  width: 100%;
+  height: 100px;
+   align-items: center; 
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  
+}
+.center{
+ margin-left: 180px;
 }
